--- a/WPF/MainWindow.xaml
+++ b/WPF/MainWindow.xaml
@@ -7,6 +7,10 @@
         mc:Ignorable="d"
         Title="HID Demo WPF" Height="630" Width="610" MinWidth="610" MinHeight="630">
 
+    <Window.Resources>
+        <local:CommunicatorViewModel x:Key="CommunicatorVM"/>
+    </Window.Resources>
+
     <Grid Width="Auto" HorizontalAlignment="Left" VerticalAlignment="Top">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*" />
@@ -31,20 +35,16 @@
                     <RowDefinition Height="1*" />
                 </Grid.RowDefinitions>
                 <GroupBox Header="Vid" Grid.Column="0" Width="80" Height="45" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0">
-                    <TextBox Name="Vid_TextBox" IsEnabled="True" Background="WhiteSmoke" Width="60" Height="20">
-                        0x1234
-                    </TextBox>
+                    <TextBox Name="Vid_TextBox" Text="{Binding VidTxt, Source={StaticResource CommunicatorVM}, UpdateSourceTrigger=LostFocus}" IsEnabled="True" Background="WhiteSmoke" Width="60" Height="20"/>
                 </GroupBox>
                 <GroupBox Header="Pid" Grid.Column="1" Width="80" Height="45" Margin="10,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
-                    <TextBox Name="Pid_TextBox" IsEnabled="True" Background="WhiteSmoke" Width="60" Height="20">
-                        0x5678
-                    </TextBox>
+                    <TextBox Name="Pid_TextBox" Text="{Binding PidTxt, Source={StaticResource CommunicatorVM}, UpdateSourceTrigger=LostFocus}" IsEnabled="True" Background="WhiteSmoke" Width="60" Height="20"/>
                 </GroupBox>
             </Grid>
         </GroupBox>
         <!-- Row 1 -->
         <GroupBox Header="Attached Devices" Name="AttachedDevices_GroupBox" Grid.Column="0" Grid.Row="1" Height="130" Width="580" Margin="10,10,10,10">
-            <TextBox Name="AttachedDevices_TextBox" IsEnabled="True" Background="WhiteSmoke" Margin="10,10,10,10"></TextBox>
+            <TextBox Name="AttachedDevices_TextBox" Text="{Binding DeviceListTxt, Mode=OneWay, Source={StaticResource CommunicatorVM}}" IsEnabled="True" IsReadOnly="True" Background="WhiteSmoke" Margin="10,10,10,10"></TextBox>
         </GroupBox>
         
         <!-- Row 2 -->
@@ -65,7 +65,8 @@
                 </Grid.RowDefinitions>
 
                 <!-- Row 0 -->
-                <TextBlock Name="ConnectionStatus_TextBlock" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Margin="10,10,10,10">Connection Status: Not Connected</TextBlock>
+                <TextBlock Name="ConnectionStatus_TextBlock" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Margin="10,10,10,10" 
+                    Text="{Binding ConnectionStatusTxt, Source={StaticResource CommunicatorVM}}"/>
                 <TextBlock Name="Uptime_TextBlock" Grid.Column="2" Grid.Row="0" Margin="10,10,10,10">Uptime: -</TextBlock>
                 
                 <!-- Row 1-->
@@ -80,7 +81,7 @@
 
                 <!-- Row 3-->
                 <TextBlock Name="PushbuttonState_TextBlock" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" Margin="10,10,10,10">Pushbutton State: unknown</TextBlock>
-                <Button Name="Toggle_Button" Grid.Column="2" Grid.Row="3"  Grid.ColumnSpan="1" IsEnabled="true" Margin="10,5">Toggle LED</Button>
+                <Button Name="Toggle_Button" Grid.Column="2" Grid.Row="3"  Grid.ColumnSpan="1" IsEnabled="true" Margin="10,5" Command="{Binding ToggleClick, Source={StaticResource CommunicatorVM}}">Toggle LED</Button>
 
                 <!-- Row 4-->
                 <ProgressBar Name="ADC_ProgressBar" Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="4" Minimum="0" Maximum="1023" Value="234"  Margin="10,5"/>
