--- a/WPF/MainWindow.xaml
+++ b/WPF/MainWindow.xaml
@@ -35,10 +35,10 @@
                     <RowDefinition Height="1*" />
                 </Grid.RowDefinitions>
                 <GroupBox Header="Vid" Grid.Column="0" Width="80" Height="45" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0">
-                    <TextBox Name="Vid_TextBox" Text="{Binding VidTxt, Source={StaticResource CommunicatorVM}, UpdateSourceTrigger=LostFocus}" IsEnabled="True" Background="WhiteSmoke" Width="60" Height="20"/>
+                    <TextBox Name="Vid_TextBox" Text="{Binding VidTxt, Source={StaticResource CommunicatorVM}, UpdateSourceTrigger=Explicit}" LostFocus="FocusLostHandler" KeyUp="KeyUpHander" IsEnabled="True" MaxLength="6" Background="WhiteSmoke" Width="60" Height="20"/>
                 </GroupBox>
                 <GroupBox Header="Pid" Grid.Column="1" Width="80" Height="45" Margin="10,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
-                    <TextBox Name="Pid_TextBox" Text="{Binding PidTxt, Source={StaticResource CommunicatorVM}, UpdateSourceTrigger=LostFocus}" IsEnabled="True" Background="WhiteSmoke" Width="60" Height="20"/>
+                    <TextBox Name="Pid_TextBox" Text="{Binding PidTxt, Source={StaticResource CommunicatorVM}, UpdateSourceTrigger=Explicit}" LostFocus="FocusLostHandler" KeyUp="KeyUpHander" IsEnabled="True" MaxLength="6" Background="WhiteSmoke" Width="60" Height="20"/>
                 </GroupBox>
             </Grid>
         </GroupBox>
@@ -67,31 +67,53 @@
                 <!-- Row 0 -->
                 <TextBlock Name="ConnectionStatus_TextBlock" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Margin="10,10,10,10" 
                     Text="{Binding ConnectionStatusTxt, Source={StaticResource CommunicatorVM}}"/>
-                <TextBlock Name="Uptime_TextBlock" Grid.Column="2" Grid.Row="0" Margin="10,10,10,10">Uptime: -</TextBlock>
-                
+                <TextBlock Name="Uptime_TextBlock" Grid.Column="2" Grid.Row="0" Margin="10,10,10,10"
+                    Text="{Binding UptimeTxt, Mode=OneWay, Source={StaticResource CommunicatorVM}}"
+                    IsEnabled="{Binding UserInterfaceActive, Mode=OneWay, Source={StaticResource CommunicatorVM}}"/>
+
                 <!-- Row 1-->
-                <TextBlock Name="TxSuccessful_TextBlock" Grid.Column="0" Grid.Row="1" Margin="10,10,10,10">Packets sent: 0</TextBlock>
-                <TextBlock Name="TxFailed_TextBox" Grid.Column="1" Grid.Row="1" Margin="10,10,10,10">Send failed: 0</TextBlock>
-                <TextBlock Name="RxSuccessful_TextBlock" Grid.Column="2" Grid.Row="1" Margin="10,10,10,10">Packets received: 0</TextBlock>
-                <TextBlock Name="RxFailed_TextBox" Grid.Column="3" Grid.Row="1" Margin="10,10,10,10">Reception failed: 0</TextBlock>
+                <TextBlock Name="TxSuccessful_TextBlock" Grid.Column="0" Grid.Row="1" Margin="10,10,10,10"
+                    Text="{Binding TxSuccessfulTxt, Mode=OneWay, Source={StaticResource CommunicatorVM}}"
+                    IsEnabled="{Binding UserInterfaceActive, Source={StaticResource CommunicatorVM}}"/>
+                <TextBlock Name="TxFailed_TextBox" Grid.Column="1" Grid.Row="1" Margin="10,10,10,10"
+                    Text="{Binding TxFailedTxt, Mode=OneWay, Source={StaticResource CommunicatorVM}}"
+                    IsEnabled="{Binding UserInterfaceActive, Source={StaticResource CommunicatorVM}}"/>
+                <TextBlock Name="RxSuccessful_TextBlock" Grid.Column="2" Grid.Row="1" Margin="10,10,10,10"
+                    Text="{Binding RxSuccessfulTxt, Mode=OneWay, Source={StaticResource CommunicatorVM}}"
+                    IsEnabled="{Binding UserInterfaceActive, Source={StaticResource CommunicatorVM}}"/>
+                <TextBlock Name="RxFailed_TextBox" Grid.Column="3" Grid.Row="1" Margin="10,10,10,10"
+                    Text="{Binding RxFailedTxt, Mode=OneWay, Source={StaticResource CommunicatorVM}}"
+                    IsEnabled="{Binding UserInterfaceActive, Source={StaticResource CommunicatorVM}}"/>
 
                 <!-- Row 2-->
-                <TextBlock Name="TxSpeed_TextBlock" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Margin="10,10,10,10">TX Speed: n/a</TextBlock>
-                <TextBlock Name="TxSpeed_TextBox" Grid.Column="2" Grid.Row="2" Grid.ColumnSpan="2" Margin="10,10,10,10">RX Speed: n/a</TextBlock>
+                <TextBlock Name="TxSpeed_TextBlock" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Margin="10,10,10,10"
+                    Text="{Binding TxSpeedTxt, Mode=OneWay, Source={StaticResource CommunicatorVM}}"
+                    IsEnabled="{Binding UserInterfaceActive, Source={StaticResource CommunicatorVM}}"/>
+                <TextBlock Name="TxSpeed_TextBox" Grid.Column="2" Grid.Row="2" Grid.ColumnSpan="2" Margin="10,10,10,10"
+                    Text="{Binding RxSpeedTxt, Mode=OneWay, Source={StaticResource CommunicatorVM}}"
+                    IsEnabled="{Binding UserInterfaceActive, Source={StaticResource CommunicatorVM}}"/>
 
                 <!-- Row 3-->
-                <TextBlock Name="PushbuttonState_TextBlock" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" Margin="10,10,10,10">Pushbutton State: unknown</TextBlock>
-                <Button Name="Toggle_Button" Grid.Column="2" Grid.Row="3"  Grid.ColumnSpan="1" IsEnabled="true" Margin="10,5" Command="{Binding ToggleClick, Source={StaticResource CommunicatorVM}}">Toggle LED</Button>
+                <TextBlock Name="PushbuttonState_TextBlock" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" Margin="10,10,10,10"
+                    Text="{Binding PushbuttonStatusTxt, Mode=OneWay, Source={StaticResource CommunicatorVM}}"
+                    IsEnabled="{Binding UserInterfaceActive, Source={StaticResource CommunicatorVM}}"/>
+                <Button Name="Toggle_Button" Grid.Column="2" Grid.Row="3"  Grid.ColumnSpan="1" Margin="10,5"
+                    IsEnabled="{Binding LedToggleActive, Source={StaticResource CommunicatorVM}}"  
+                    Command="{Binding ToggleClick, Source={StaticResource CommunicatorVM}}"
+                    Content="{Binding PushbuttonContentTxt, Source={StaticResource CommunicatorVM}}"/>
 
                 <!-- Row 4-->
-                <ProgressBar Name="ADC_ProgressBar" Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="4" Minimum="0" Maximum="1023" Value="234"  Margin="10,5"/>
+                <ProgressBar Name="ADC_ProgressBar" Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="4" Minimum="0" Maximum="1023" Margin="10,5"
+                    Value="{Binding AdcValue, Mode=OneWay, Source={StaticResource CommunicatorVM}}"
+                    IsEnabled="{Binding UserInterfaceActive, Source={StaticResource CommunicatorVM}}"/>
 
             </Grid>
         </GroupBox>
 
         <!-- Row 3 -->
         <GroupBox Header="Activity Logging" Name="ActivityLogging_GroupBox" Grid.Column="0" Grid.Row="3" Height="130" Width="580" Margin="10,5">
-            <TextBox Name="ActivityLogging_TextBox" IsEnabled="True" Background="WhiteSmoke" Margin="10,10,10,10"></TextBox>
+            <TextBox Name="ActivityLogging_TextBox" IsEnabled="True" Background="WhiteSmoke" Margin="10,10,10,10" 
+                Text="{Binding ActivityLogTxt, Mode=OneWay, Source={StaticResource CommunicatorVM}}"/>
         </GroupBox>
 
     </Grid>
