--- a/WPF/MainWindow.xaml
+++ b/WPF/MainWindow.xaml
@@ -69,34 +69,34 @@
                     Text="{Binding ConnectionStatusTxt, Source={StaticResource CommunicatorVM}}"/>
                 <TextBlock Name="Uptime_TextBlock" Grid.Column="2" Grid.Row="0" Margin="10,10,10,10"
                     Text="{Binding UptimeTxt, Mode=OneWay, Source={StaticResource CommunicatorVM}}"
-                    IsEnabled="{Binding UserInterfaceActive, Mode=OneWay, Source={StaticResource CommunicatorVM}}"/>
+                    Foreground="{Binding UserInterfaceColor, Source={StaticResource CommunicatorVM}}"/>
 
                 <!-- Row 1-->
                 <TextBlock Name="TxSuccessful_TextBlock" Grid.Column="0" Grid.Row="1" Margin="10,10,10,10"
                     Text="{Binding TxSuccessfulTxt, Mode=OneWay, Source={StaticResource CommunicatorVM}}"
-                    IsEnabled="{Binding UserInterfaceActive, Source={StaticResource CommunicatorVM}}"/>
+                    Foreground="{Binding UserInterfaceColor, Source={StaticResource CommunicatorVM}}"/>
                 <TextBlock Name="TxFailed_TextBox" Grid.Column="1" Grid.Row="1" Margin="10,10,10,10"
                     Text="{Binding TxFailedTxt, Mode=OneWay, Source={StaticResource CommunicatorVM}}"
-                    IsEnabled="{Binding UserInterfaceActive, Source={StaticResource CommunicatorVM}}"/>
+                    Foreground="{Binding UserInterfaceColor, Source={StaticResource CommunicatorVM}}"/>
                 <TextBlock Name="RxSuccessful_TextBlock" Grid.Column="2" Grid.Row="1" Margin="10,10,10,10"
                     Text="{Binding RxSuccessfulTxt, Mode=OneWay, Source={StaticResource CommunicatorVM}}"
-                    IsEnabled="{Binding UserInterfaceActive, Source={StaticResource CommunicatorVM}}"/>
+                    Foreground="{Binding UserInterfaceColor, Source={StaticResource CommunicatorVM}}"/>
                 <TextBlock Name="RxFailed_TextBox" Grid.Column="3" Grid.Row="1" Margin="10,10,10,10"
                     Text="{Binding RxFailedTxt, Mode=OneWay, Source={StaticResource CommunicatorVM}}"
-                    IsEnabled="{Binding UserInterfaceActive, Source={StaticResource CommunicatorVM}}"/>
+                    Foreground="{Binding UserInterfaceColor, Source={StaticResource CommunicatorVM}}"/>
 
                 <!-- Row 2-->
                 <TextBlock Name="TxSpeed_TextBlock" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Margin="10,10,10,10"
                     Text="{Binding TxSpeedTxt, Mode=OneWay, Source={StaticResource CommunicatorVM}}"
-                    IsEnabled="{Binding UserInterfaceActive, Source={StaticResource CommunicatorVM}}"/>
+                    Foreground="{Binding UserInterfaceColor, Source={StaticResource CommunicatorVM}}"/>
                 <TextBlock Name="TxSpeed_TextBox" Grid.Column="2" Grid.Row="2" Grid.ColumnSpan="2" Margin="10,10,10,10"
                     Text="{Binding RxSpeedTxt, Mode=OneWay, Source={StaticResource CommunicatorVM}}"
-                    IsEnabled="{Binding UserInterfaceActive, Source={StaticResource CommunicatorVM}}"/>
+                    Foreground="{Binding UserInterfaceColor, Source={StaticResource CommunicatorVM}}"/>
 
                 <!-- Row 3-->
                 <TextBlock Name="PushbuttonState_TextBlock" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" Margin="10,10,10,10"
                     Text="{Binding PushbuttonStatusTxt, Mode=OneWay, Source={StaticResource CommunicatorVM}}"
-                    IsEnabled="{Binding UserInterfaceActive, Source={StaticResource CommunicatorVM}}"/>
+                    Foreground="{Binding UserInterfaceColor, Source={StaticResource CommunicatorVM}}"/>
                 <Button Name="Toggle_Button" Grid.Column="2" Grid.Row="3"  Grid.ColumnSpan="1" Margin="10,5"
                     IsEnabled="{Binding LedToggleActive, Source={StaticResource CommunicatorVM}}"  
                     Command="{Binding ToggleClick, Source={StaticResource CommunicatorVM}}"
